--- a/src/component/Layout/defaultLayout/Header/Header.module.scss
+++ b/src/component/Layout/defaultLayout/Header/Header.module.scss
@@ -1,4 +1,54 @@
 .wrapper {
     height: 60px;
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.inner {
+    width: var(--default-layout-width);
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+//1
+.logo {
+}
+//2
+.search {
+    border-radius: 92px;
+    color: #161823;
+    background-color: #f1f1f2;
+    padding: 0 16px;
+    width: 361px;
+    height: 46px;
+    color: #f1f1f2;
+    position: relative;
+
+    input {
+        border: none;
+        background-color: transparent;
+        outline: none;
+        padding: 12px 0;
+        caret-color: var(--primary);
+        font-weight: 400;
+        font-size: 1.6rem;
+        width: 292px;
+        color: var(--text-black);
+    }
+}
+
+.clear__btn,
+.loading__btn {
+    border: none;
+    position: absolute;
+    z-index: 1;
+}
+
+.search__btn {
+    border: none;
+}
+//3
+.actions {
 }
